--- a/.github/workflows/quay.yaml
+++ b/.github/workflows/quay.yaml
@@ -47,6 +47,7 @@ jobs:
           image-ref: cluster-custom-metrics:temp
           severity: HIGH,CRITICAL
           exit-code: 1
+          ignore-policy: .trivyignore
           ignore-unfixed: true
         continue-on-error: ${{ github.ref == 'refs/heads/develop' }}
 
