--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -20,5 +20,8 @@ jobs:
       run: |
         pip install flask==3.1.1 prometheus_client==0.22.0 pytest
 
+    - name: Test
+      run: ls - lh
+
     - name: Run tests
       run: pytest /tests/test_app.py
