--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,4 +24,4 @@ jobs:
       run: ls -lh
 
     - name: Run tests
-      run: pytest ./tests/test_app.py
+      run:  PYTHONPATH=./app pytest ./tests/test_app.py
