--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build and Push to Quay.io
+name: Build, Test and Push to Quay.io
 
 on:
   push:
@@ -8,11 +8,24 @@ on:
     types: [published]
 
 jobs:
-  build-and-push:
+  build-test-push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+
+      - name: Install Python dependencies for testing
+        run: |
+          pip install flask==3.1.1 prometheus_client==0.22.0 pytest pytest-mock
+
+      - name: Run unit tests (verbose)
+        run: |
+          PYTHONPATH=./app pytest -v --tb=short tests/
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -32,7 +45,7 @@ jobs:
           else
             echo "tag=develop" >> $GITHUB_OUTPUT
           fi
- 
+
       - name: Build Docker image (with local load)
         uses: docker/build-push-action@v5
         with:
