--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+        #   token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.xml
           flags: unittests
           name: codecov-clustermetrics
@@ -76,3 +76,15 @@ jobs:
         run: |
           docker tag cluster-custom-metrics:temp quay.io/jandradap/cluster-custom-metrics:${{ steps.get_tag.outputs.tag }}
           docker push quay.io/jandradap/cluster-custom-metrics:${{ steps.get_tag.outputs.tag }}
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Push to Docker Hub
+        if: github.ref == 'refs/heads/develop' || github.event_name == 'release'
+        run: |
+          docker tag cluster-custom-metrics:temp docker.io/${{ secrets.DOCKERHUB_USERNAME }}/cluster-custom-metrics:${{ steps.get_tag.outputs.tag }}
+          docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/cluster-custom-metrics:${{ steps.get_tag.outputs.tag }}
