--- a/metrics-reader-sa.yaml
+++ b/metrics-reader-sa.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: metrics-reader
-  namespace: openshift-monitoring
+  namespace: cluster-monitoring
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -15,4 +15,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: metrics-reader
-  namespace: openshift-monitoring
+  namespace: cluster-monitoring
