--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          PYTHONPATH=./app pytest --cov=app --cov-report=term --cov-report=xml -v tests/
+          PYTHONPATH=./ pytest --cov=app --cov-report=term --cov-report=xml -v tests/
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
