--- a/deploy/2_configmap.yaml
+++ b/deploy/2_configmap.yaml
@@ -1,7 +1,7 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: cluster-custom-config
+  name: metrics-config
   namespace: cluster-monitoring
 immutable: false
 data:
