Add update interval config, enhance alerts and dashboards

--- a/app/config.json
+++ b/app/config.json
@@ -8,6 +8,7 @@
         "pvc_pending": [],
         "single_replica": [],
         "no_resources": [],
-        "priv_sa": []
-    }
+    "priv_sa": []
+    },
+    "update_seconds": 60
 }
