--- a/deploy/2_configmap.yaml
+++ b/deploy/2_configmap.yaml
@@ -8,5 +8,6 @@ data:
   config.json: |-
     {
       "subnet": "10.10.10.0/24",
-      "exclude_namespaces": ["openshift-*", "kube-*", "default"]
+      "exclude_namespaces": ["openshift-*", "kube-*", "default"],
+      "update_seconds": 60
     }
