--- a/prometheus-rules/privileged-sa-rules.yaml
+++ b/prometheus-rules/privileged-sa-rules.yaml
@@ -8,10 +8,14 @@ spec:
   - name: privileged-serviceaccount
     rules:
     - alert: PrivilegedServiceAccount
-      expr: privileged_serviceaccount_total > 0
+      expr: privileged_serviceaccount > 0
       for: 15m
       labels:
         severity: warning
+        namespace: '{{ $labels.namespace }}'
+        app: '{{ $labels.app }}'
+        serviceaccount: '{{ $labels.serviceaccount }}'
+        scc: '{{ $labels.scc }}'
       annotations:
-        summary: "Privileged ServiceAccount in use"
-        description: "Workloads are running with privileged service accounts."
+        summary: "Privileged SA {{ $labels.serviceaccount }} in {{ $labels.namespace }}"
+        description: "Workload {{ $labels.app }} in namespace {{ $labels.namespace }} uses service account {{ $labels.serviceaccount }} with SCC {{ $labels.scc }}."
