--- a/deploy/6_deployment.yaml
+++ b/deploy/6_deployment.yaml
@@ -22,7 +22,13 @@ spec:
       terminationGracePeriodSeconds: 30
       securityContext: {}
       containers:
-        - resources: {}
+        - resources:
+            requests:
+              cpu: "50m"
+              memory: "128Mi"
+            limits:
+              cpu: "200m"
+              memory: "256Mi"
           terminationMessagePath: /dev/termination-log
           name: app
           env:
@@ -35,6 +41,18 @@ spec:
           ports:
             - containerPort: 8080
               protocol: TCP
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 30
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 30
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: config-volume
