--- a/prometheus-rules/pvc-pending-rules.yaml
+++ b/prometheus-rules/pvc-pending-rules.yaml
@@ -8,10 +8,12 @@ spec:
   - name: pvc-pending
     rules:
     - alert: PendingPVC
-      expr: pvc_pending_total > 0
+      expr: pvc_pending > 0
       for: 10m
       labels:
         severity: warning
+        namespace: '{{ $labels.namespace }}'
+        pvc: '{{ $labels.pvc }}'
       annotations:
-        summary: "PVCs pending binding"
-        description: "Some PersistentVolumeClaims are stuck in Pending state."
+        summary: "PVC {{ $labels.pvc }} pending in {{ $labels.namespace }}"
+        description: "PersistentVolumeClaim {{ $labels.pvc }} in namespace {{ $labels.namespace }} is stuck in Pending state."
