--- a/deploy/2_configmap.yaml
+++ b/deploy/2_configmap.yaml
@@ -30,5 +30,6 @@ data:
             "route_cert": true
         },
         "update_seconds": 60,
-        "days": 180
+        "days": 180,
+        "scc_types": ["restricted", "anyuid", "hostaccess", "hostmount-anyuid", "privileged"]
     }
