--- a/deploy/2_configmap.yaml
+++ b/deploy/2_configmap.yaml
@@ -17,6 +17,7 @@ data:
             "single_replica": [],
             "no_resources": [],
             "priv_sa": [],
+            "no_antiaffinity": [],
             "route_cert": []
         },
         "enabled_features": {
@@ -27,6 +28,7 @@ data:
             "single_replica": true,
             "no_resources": true,
             "priv_sa": true,
+            "no_antiaffinity": true,
             "route_cert": true
         },
         "update_seconds": 60,
