--- a/deploy/2_configmap.yaml
+++ b/deploy/2_configmap.yaml
@@ -5,9 +5,33 @@ metadata:
   namespace: cluster-monitoring
 immutable: false
 data:
-  config.json: |-
+  config.json: |
     {
-      "subnet": "10.10.10.0/24",
-      "exclude_namespaces": ["openshift-*", "kube-*", "default"],
-      "update_seconds": 60
+        "subnet": "10.10.10.0/24",
+        "exclude_namespaces": ["openshift*", "kube-*", "default"],
+        "feature_exclusions": {
+            "np": [],
+            "quota": [],
+            "pv_unbound": [],
+            "pvc_pending": [],
+            "single_replica": [],
+            "no_resources": [],
+            "priv_sa": [],
+            "no_antiaffinity": [],
+            "route_cert": []
+        },
+        "enabled_features": {
+            "np": true,
+            "quota": true,
+            "pv_unbound": true,
+            "pvc_pending": true,
+            "single_replica": true,
+            "no_resources": true,
+            "priv_sa": true,
+            "no_antiaffinity": true,
+            "route_cert": true
+        },
+        "update_seconds": 60,
+        "days": 180,
+        "scc_types": ["restricted", "anyuid", "hostaccess", "hostmount-anyuid", "privileged"]
     }
